I don't like this style but i'll go with it

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Bring Back WackyWebM Epicness",
   "description": "Restores the webm glitch Discord had in July 2022.",
   "author": {
-    "name": "oirnoir",
+    "name": "OIRNOIR",
     "discordID": "720842469024989195",
     "github": "oirnoir"
   },
