--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "devDependencies": {
     "@parcel/config-default": "^2.8.3",
     "@parcel/core": "^2.8.3",
-    "@types/node": "^18.11.15",
-    "prettier": "^2.8.1",
-    "replugged": "4.0.0-beta0.26"
+    "@types/node": "^18.15.11",
+    "prettier": "^2.8.7",
+    "replugged": "^4.2.3"
   }
 }
