--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,13 @@
     "discordID": "720842469024989195",
     "github": "oirnoir"
   },
-  "version": "1.0.9",
+  "version": "1.0.10",
   "updater": {
-    "type": "github",
-    "id": "oirnoir/bbwwme"
+    "type": "store",
+    "id": "dev.oirnoir.bbwwme"
   },
   "license": "MIT",
   "type": "replugged-theme",
-  "main": "src/main.css"
+  "main": "src/main.css",
+	"source": "https://github.com/OIRNOIR/bbwwme"
 }
