--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "discordID": "720842469024989195",
     "github": "oirnoir"
   },
-  "version": "1.0.10",
+  "version": "1.0.11",
   "updater": {
     "type": "store",
     "id": "dev.oirnoir.bbwwme"
@@ -15,5 +15,6 @@
   "license": "MIT",
   "type": "replugged-theme",
   "main": "src/main.css",
-	"source": "https://github.com/OIRNOIR/bbwwme"
+	"source": "https://github.com/OIRNOIR/bbwwme",
+	"images": ["https://github.com/OIRNOIR/bbwwme/blob/master/assets/enabledExample.gif?raw=true", "https://github.com/OIRNOIR/bbwwme/blob/master/assets/disabledExample.gif?raw=true"]
 }
