--- a/package.json
+++ b/package.json
@@ -5,21 +5,20 @@
   "engines": {
     "node": ">=14.0.0"
   },
+  "private": true,
   "scripts": {
     "build": "replugged build theme",
     "watch": "replugged build theme --watch",
     "bundle": "replugged bundle theme",
+    "release": "replugged release",
     "lint": "prettier ./src --check",
     "lint:fix": "prettier ./src --write"
   },
   "keywords": [],
   "author": "OIRNOIR",
-  "license": "GPL",
+  "license": "GPL-3.0",
   "devDependencies": {
-    "@parcel/config-default": "^2.10.3",
-    "@parcel/core": "^2.10.3",
-    "@types/node": "^20.10.5",
-    "prettier": "^3.1.1",
-    "replugged": "^4.7.7"
+    "prettier": "^3.2.5",
+    "replugged": "^4.7.9"
   }
 }
