--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
     "type": "store",
     "id": "dev.oirnoir.bbwwme"
   },
-  "license": "MIT",
+  "license": "GPL-3.0",
   "type": "replugged-theme",
   "main": "src/main.css",
 	"source": "https://github.com/OIRNOIR/bbwwme",
